# zillionaire

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  api.h  cmake_install.cmake  common.h  display.c  display.h  fuwen.cpp  help.c  hospital.c  hospital.h  housedeal.c  housedeal.h  input.c  make_test_file.py  richman  richman.c  richman.cbp  richman.h  store_file.txt  test.c  test.h  测试文件目的.txt  测试用例说明v0.1.md  测试用例说明v2.0.md  软件工程.md
.svn/: wc.db
pictures/: 分工.md
test_file/: iteration1_0
test_file/dump/: dump_3  dump_7
test_file/input/: input_0  input_2  input_3  input_4  input_5  input_6  input_8  input_9
test_file/output/: output.txt  output_0  output_1  output_10  output_2  output_3  output_8  output_9
zillionaire/: CMakeCache.txt  CMakeLists.txt  Makefile  api.h  cmake_install.cmake  common.h  display.h  help.c  housedeal.c  housedeal.h  richman  richman.c  richman.h  store_file.txt  test  test.c  zillion
